# MathTools

./: README.md  cli.py  environments.py  install.sh  pyproject.toml
.github/workflows/: tests.yml
src/: main.py
src/cli/: general.py  installer.py  memory.py
src/cli/monitoring/: antigravity_source.py  claude_source.py  extend.py  extended.py  gemini_source.py  monitoring.py  opencode_source.py
src/constants/: directories.py  environments.py  general.py  repositories.py  source_files.py
src/utils/: common.py  installer_utils.py  ui.py
tests/: test_cli_general.py  test_cli_memory.py  test_cli_monitoring.py  test_constants.py
