[project]
name = "matrueba-sdd-installer"
version = "0.1.0"
description = "CLI installer for MathTools AI Development Framework"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "requests>=2.31.0",
    "questionary>=2.0.1",
]

[project.urls]
Homepage = "https://github.com/matrueba/mathtools"

[project.scripts]
matrueba-sdd = "cli:main"